--- a/static/nav.css
+++ b/static/nav.css
@@ -1,10 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
 nav{
   position: fixed;
   z-index: 99;
@@ -267,7 +261,7 @@ nav input{
   width: 100%;
   text-align: center;
   padding: 0 30px;
-  color: #dfd1fa;
+  color: white;
 }
 .body-text div{
   font-size: 45px;
