--- a/static/home.css
+++ b/static/home.css
@@ -7,15 +7,29 @@
   text-align: center;
   padding: 0 30px;
   color: #fdfbfe;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 .body-text div{
+  margin-top: 0;
   font-size: 45px;
   font-weight: 600;
   padding: 10px;
+  padding-top: 0;
 }
 .header01{
   font-size: 50px;
 }
 .sub-header01{
   font-size: 40px;
+}
+body {
+  background-color: #eee
+}
+.choice-card-container{
+  display: flex;
+  justify-content: center;
+}
+.choice-card{
+  background-color: ;
 }
