--- a/templates/base.html
+++ b/templates/base.html
@@ -16,20 +16,30 @@
     <link rel="stylesheet" href="{% static 'nav.css'%}"> 
     <nav>
       <div class="wrapper">
-        <div class="logo"><a href="#">Ocean Garden</a></div>
+        <div class="logo"><a href="{% url 'home'%}">Ocean Garden</a>{% csrf_token %}</div>
         <input type="radio" name="slider" id="menu-btn">
         <input type="radio" name="slider" id="close-btn">
         <ul class="nav-links">
           <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-          <li><a href="#">Home</a></li>
+          <li><a href="{% url 'home'%}">Home</a>{% csrf_token %}</li>
           <li>
             <a href="#" class="desktop-item">Learn</a>
             <input type="checkbox" id="showDrop">
             <label for="showDrop" class="mobile-item">Dropdown Menu</label>
             <ul class="drop-menu">
-              <li><a href="#">Beginner</a></li>
-              <li><a href="#">Intermediate</a></li>
-              <li><a href="#">Advanced</a></li>
+              <li><a href="{% url 'begineer'%}">Beginner</a>{% csrf_token %}</li>
+              <li><a href="{% url 'intermediate'%}">Intermediate</a>{% csrf_token %}</li>
+              <li><a href="{% url 'advanced'%}">Advanced</a>{% csrf_token %}</li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="desktop-item">Resources</a>
+            <input type="checkbox" id="showDrop">
+            <label for="showDrop" class="mobile-item">Dropdown Menu</label>
+            <ul class="drop-menu">
+              <li><a href="{% url 'begineer'%}">Beginner</a>{% csrf_token %}</li>
+              <li><a href="{% url 'intermediate'%}">Intermediate</a>{% csrf_token %}</li>
+              <li><a href="{% url 'advanced'%}">Advanced</a>{% csrf_token %}</li>
             </ul>
           </li>
           <li><a href="#">About</a></li>
@@ -38,6 +48,7 @@
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
       </div>
     </nav>
+ 
     {% load static %}
     {% block content %}{% endblock %}
   </body>
