--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,18 @@ OceanGarden|Home
 {% block content %}
 <link rel="stylesheet" href="{% static 'home.css'%}">
 <div class="body-text">
-  <div class="title"><span class="header01">Ocean Garden</span></div>
+  <div class="title"><span class="header01">Ocean Garden</a></span></div>
   <div class="sub-title"><span class="sub-header01">An Interactive Learning platform</span></div>
+</div>
+<div class="choice-card-container">
+    <div class="choice-card">
+        <div class="choice-card-title">
+            <h1>Beginner</h1>
+        </div>
+        <div class="choice-info">
+            <h4>Recommended for Ages 10 and below</h4>
+        </div>
+    </div>
+</div>
 </div>
 {% endblock %}
