--- a/static/nav.css
+++ b/static/nav.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 nav{
   position: fixed;
   z-index: 99;
   width: 100%;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  
-  background: #fdfbfe;
+  background: transparent;
 }
 nav .wrapper{
   position: relative;
@@ -19,7 +23,7 @@ nav .wrapper{
   justify-content: space-between;
 }
 .wrapper .logo a{
-  color: #7175f0;
+  color: black;
   font-size: 30px;
   font-weight: 600;
   text-decoration: none;
@@ -31,7 +35,7 @@ nav .wrapper{
   list-style: none;
 }
 .nav-links li a{
-  color: #7175f0;
+  color: black;
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -47,7 +51,7 @@ nav .wrapper{
 }
 .nav-links .drop-menu{
   position: absolute;
-  background: #242526;
+  background: #f2f2f2;
   width: 180px;
   line-height: 45px;
   top: 85px;
@@ -205,7 +209,7 @@ nav .wrapper{
     transition: all 0.3s ease;
   }
   .nav-links .mobile-item:hover{
-    background: #3A3B3C;
+    background: #f2f2f2;
   }
   .drop-menu li{
     margin: 0;
