--- a/templates/block.html
+++ b/templates/block.html
@@ -1,4 +1,8 @@
-<div class="body-text">
-  <div class="title">Ocean Garden</div>
-  <div class="sub-title">A learning platform</div>
-</div>
+{% extends 'base.html' %}
+{% block title %}
+{% endblock %}
+{% load static %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'main.css'%}">
+<link rel="stylesheet" href="{% static 'nav.css'%}">
+{% endblock %}
