--- a/static/waves.css
+++ b/static/waves.css
@@ -24,8 +24,7 @@
   width: 100%;
   overflow: hidden;
   height: 100%;
-  bottom: -1px;
-  background-image: linear-gradient(to top, #86377b 20%, #27273c 80%);
+  background-image: linear-gradient(to top, #1d7bae 20%, #27273c 80%);
 }
 .bgTop {
   z-index: 15;
