--- a/static/home.css
+++ b/static/home.css
@@ -1,6 +1,6 @@
 .body-text {
   position: absolute;
-  top: 20%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -17,9 +17,11 @@
 }
 .header01 {
   font-size: 50px;
+  margin-top: 10%;
 }
 .sub-header01 {
-  font-size: 40px;
+  font-size: 25px;
+  margin-top: 
 }
 .choice-card-container {
   display: flex;
