--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@ OceanGarden|Home
 <link rel="stylesheet" href="{% static 'main.css'%}">
 <div class="body-text">
   <div class="title"><span class="header01">Ocean Garden</a></span></div>
-  <div class="sub-title"><span class="sub-header01">An Interactive Learning platform.</span></div>
+  <div class="sub-title"><span class="sub-header01">An Interactive Learning platform.Choose an option to get started.</span></div>
 </div>
 <div class="mega-card-div">
       <div class="card-container">
