--- a/templates/home.html
+++ b/templates/home.html
@@ -13,17 +13,17 @@ OceanGarden|Home
 <div class="mega-card-div">
       <div class="card-container">
           <a href="{% url 'begineer'%}" class="hero-image-container">
-            <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
+            <img class="hero-image" src="{% static 'logo/beginner.png  '%}" alt="Spinning glass cube"/>
           </a>
         </div>
       <div class="card-container">
         <a href="{% url 'intermediate'%}" class="hero-image-container">
-          <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
+          <img class="hero-image" src="{% static 'logo/intermediate.png'%}" alt="Spinning glass cube"/>
         </a>
       </div>
       <div class="card-container">
         <a href="{% url 'advanced'%}" class="hero-image-container">
-          <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
+          <img class="hero-image" src="{% static 'logo/advanced.png'%}" alt="Spinning glass cube"/>
         </a>
       </div>
   </div>
