--- a/static/blog.css
+++ b/static/blog.css
@@ -2,17 +2,48 @@ body{
   text-align: center;
 }
 .blog-container{
-  padding-top: 5%;
+  padding-top: 1%;
   display: flex;
   justify-content: center;
 }
 .blog-div{
-  max-width: 800px;
+  max-width: 1100px;
   display: block;
   padding: 2%;
   margin-top: 1%;
+  text-align: justify;
 }
 h1{
+  text-align: center;
   color: black;
+  font-weight: 700;
+}
+p{
+  font-family: 'poppins';
+  color: black;
+  font-size: 16px;
+}
+h1{
+  font-family: 'poppins';
+  font-size: 48px;
+}
+h2{
+  font-family: 'poppins';
+  font-size: 24px;
 }
 
+
+.img-bg{
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+.gallery{
+  max-height: 800px;
+  max-width: 600p
+}
+img{
+  width: 200px;
+  height: 300px;;
+}
+  
