--- a/static/home.css
+++ b/static/home.css
@@ -8,6 +8,7 @@
   padding: 0 30px;
   color: #fdfbfe;
   margin-bottom: 0;
+  margin-top: 6%;
 }
 .body-text div {
   margin-top: 0;
@@ -15,6 +16,7 @@
   font-weight: 600;
   padding: 0 10px 10px;
 }
+
 .header01 {
   font-size: 50px;
   margin-top: 10%;
@@ -24,7 +26,8 @@
 .sub-header01 {
   font-size: 25px;
   margin-top: 0;
-  padding-top: 0; 
+  padding-top: 0;
+  font-weight: 100;
 }
 .choice-card-container {
   display: flex;
