--- a/static/nav.css
+++ b/static/nav.css
@@ -1,40 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700 &display=swap');
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-nav{
+
+nav {
   position: fixed;
   z-index: 99;
   width: 100%;
-  background: transparent;
+  background: white;
 }
-nav .wrapper{
+
+nav dl,
+ol,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+nav .wrapper {
   position: relative;
-  max-width
-  : 1300px;
-  padding: 0px 30px;
+  max-width: 1300px;
+  padding: 0 30px;
   height: 70px;
   line-height: 70px;
   margin: auto;
   display: flex;
   justify-content: space-between;
 }
-.wrapper .logo a{
+.wrapper .logo a {
   color: black;
   font-size: 30px;
   font-weight: 600;
   text-decoration: none;
 }
-.wrapper .nav-links{
+.wrapper .nav-links {
   display: inline-flex;
 }
-.nav-links li{
+.nav-links li {
   list-style: none;
 }
-.nav-links li a{
+.nav-links li a {
   color: black;
   text-decoration: none;
   font-size: 18px;
@@ -43,13 +51,13 @@ nav .wrapper{
   border-radius: 5px;
   transition: all 0.3s ease;
 }
-.nav-links li a:hover{
-  background: #3A3B3C;
+.nav-links li a:hover {
+  background: #c5e2ff;
 }
-.nav-links .mobile-item{
+.nav-links .mobile-item {
   display: none;
 }
-.nav-links .drop-menu{
+.nav-links .drop-menu {
   position: absolute;
   background: #f2f2f2;
   width: 180px;
@@ -57,23 +65,23 @@ nav .wrapper{
   top: 85px;
   opacity: 0;
   visibility: hidden;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 .nav-links li:hover .drop-menu,
-.nav-links li:hover .mega-box{
+.nav-links li:hover .mega-box {
   transition: all 0.3s ease;
   top: 70px;
   opacity: 1;
   visibility: visible;
 }
-.drop-menu li a{
+.drop-menu li a {
   width: 100%;
   display: block;
   padding: 0 0 0 15px;
   font-weight: 400;
-  border-radius: 0px;
+  border-radius: 0;
 }
-.mega-box{
+.mega-box {
   position: absolute;
   left: 0;
   width: 100%;
@@ -82,62 +90,61 @@ nav .wrapper{
   opacity: 0;
   visibility: hidden;
 }
-.mega-box .content{
+.mega-box .content {
   background: #242526;
   padding: 25px 20px;
   display: flex;
   width: 100%;
   justify-content: space-between;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
-.mega-box .content .row{
+.mega-box .content .row {
   width: calc(25% - 30px);
   line-height: 45px;
 }
-.content .row img{
+.content .row img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.content .row header{
+.content .row header {
   color: #f2f2f2;
   font-size: 20px;
   font-weight: 500;
 }
-.content .row .mega-links{
+.content .row .mega-links {
   margin-left: -40px;
-  border-left: 1px solid rgba(255,255,255,0.09);
+  border-left: 1px solid rgba(255, 255, 255, 0.09);
 }
-.row .mega-links li{
+.row .mega-links li {
   padding: 0 20px;
 }
-.row .mega-links li a{
-  padding: 0px;
+.row .mega-links li a {
   padding: 0 20px;
   color: #d9d9d9;
   font-size: 17px;
   display: block;
 }
-.row .mega-links li a:hover{
+.row .mega-links li a:hover {
   color: #f2f2f2;
 }
-.wrapper .btn{
+.wrapper .btn {
   color: #fff;
   font-size: 20px;
   cursor: pointer;
   display: none;
 }
-.wrapper .btn.close-btn{
+.wrapper .btn.close-btn {
   position: absolute;
   right: 30px;
   top: 10px;
 }
 
-@media screen and (max-width: 970px) {
-  .wrapper .btn{
+@media screen and(max-width: 970px) {
+  .wrapper .btn {
     display: block;
   }
-  .wrapper .nav-links{
+  .wrapper .nav-links {
     position: fixed;
     height: 100vh;
     width: 100%;
@@ -149,7 +156,7 @@ nav .wrapper{
     padding: 50px 10px;
     line-height: 50px;
     overflow-y: auto;
-    box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.18);
     transition: all 0.3s ease;
   }
   /* custom scroll bar */
@@ -162,43 +169,43 @@ nav .wrapper{
   ::-webkit-scrollbar-thumb {
     background: #3A3B3C;
   }
-  #menu-btn:checked ~ .nav-links{
-    left: 0%;
+  #menu-btn:checked ~ .nav-links {
+    left: 0;
   }
-  #menu-btn:checked ~ .btn.menu-btn{
+  #menu-btn:checked ~ .btn.menu-btn {
     display: none;
   }
-  #close-btn:checked ~ .btn.menu-btn{
+  #close-btn:checked ~ .btn.menu-btn {
     display: block;
   }
-  .nav-links li{
+  .nav-links li {
     margin: 15px 10px;
   }
-  .nav-links li a{
+  .nav-links li a {
     padding: 0 20px;
     display: block;
     font-size: 20px;
   }
-  .nav-links .drop-menu{
+  .nav-links .drop-menu {
     position: static;
     opacity: 1;
     top: 65px;
     visibility: visible;
     padding-left: 20px;
     width: 100%;
-    max-height: 0px;
+    max-height: 0;
     overflow: hidden;
     box-shadow: none;
     transition: all 0.3s ease;
   }
   #showDrop:checked ~ .drop-menu,
-  #showMega:checked ~ .mega-box{
+  #showMega:checked ~ .mega-box {
     max-height: 100%;
   }
-  .nav-links .desktop-item{
+  .nav-links .desktop-item {
     display: none;
   }
-  .nav-links .mobile-item{
+  .nav-links .mobile-item {
     display: block;
     color: #f2f2f2;
     font-size: 20px;
@@ -208,56 +215,56 @@ nav .wrapper{
     border-radius: 5px;
     transition: all 0.3s ease;
   }
-  .nav-links .mobile-item:hover{
+  .nav-links .mobile-item:hover {
     background: #f2f2f2;
   }
-  .drop-menu li{
+  .drop-menu li {
     margin: 0;
   }
-  .drop-menu li a{
+  .drop-menu li a {
     border-radius: 5px;
     font-size: 18px;
   }
-  .mega-box{
+  .mega-box {
     position: static;
     top: 65px;
     opacity: 1;
     visibility: visible;
     padding: 0 20px;
-    max-height: 0px;
+    max-height: 0;
     overflow: hidden;
     transition: all 0.3s ease;
   }
-  .mega-box .content{
+  .mega-box .content {
     box-shadow: none;
     flex-direction: column;
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 0;
   }
-  .mega-box .content .row{
+  .mega-box .content .row {
     width: 100%;
     margin-bottom: 15px;
-    border-top: 1px solid rgba(255,255,255,0.08);
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
   }
   .mega-box .content .row:nth-child(1),
-  .mega-box .content .row:nth-child(2){
-    border-top: 0px;
+  .mega-box .content .row:nth-child(2) {
+    border-top: 0;
   }
-  .content .row .mega-links{
-    border-left: 0px;
+  .content .row .mega-links {
+    border-left: 0;
     padding-left: 15px;
   }
-  .row .mega-links li{
+  .row .mega-links li {
     margin: 0;
   }
-  .content .row header{
+  .content .row header {
     font-size: 19px;
   }
 }
-nav input{
+nav input {
   display: none;
 }
 
-.body-text{
+.body-text {
   position: absolute;
   top: 20%;
   left: 50%;
@@ -267,7 +274,7 @@ nav input{
   padding: 0 30px;
   color: white;
 }
-.body-text div{
+.body-text div {
   font-size: 45px;
   font-weight: 600;
 }
