--- a/templates/beginner.html
+++ b/templates/beginner.html
@@ -4,11 +4,11 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'main.css'%}">
-<link rel="stylesheet" href="{% static 'nav.css'%}">
+<link rel="stylesheet" href="{% static 'nav3.css'%}">
 <link rel="stylesheet" href="{% static 'begineer.css'%}">
 <div class="vid-container">
   <div class="vid-div">
-    <video width="100%" height="400" controls>
+    <video width="100%" height="400" autoplay loop >
       <source src="{% static 'vid-b.mp4'%}" type="video/mp4">
     </video>
   </div>
