--- a/static/data.css
+++ b/static/data.css
@@ -1,121 +1,8 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; 
-}
-
-.data-header {
-  font-family: "Poppins";
-  text-align: center;
-  color: whitesmoke;
-  font-weight: 700;
-  font-size: 36px;
-  margin-bottom: 20px;
-  padding-bottom: 0;
-}
-
-
-.container {
-  width:100%;
-  margin: 2rem auto; 
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 5vw);
-  grid-gap: 1.5rem; 
-}
-
-.gallery__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block; 
-}
-
-.gallery__img:hover {
-  width: 130%;
-  height: 130%;
-  transition: width 0.3s;
-  z-index: 1;
-}
-
-.gallery__item--1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 2;  */
-  /* grid-row: 1 / span 2; */
-}
-
-.gallery__item--2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
-
-  /** Alternative Syntax **/
-  /* grid-column: 3 / span 2;  */
-  /* grid-row: 1 / span 2; */
-}
-
-.gallery__item--3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 6;
-
-  /** Alternative Syntax **/
-  /* grid-column: 5 / span 4;
-  grid-row: 1 / span 5; */
-}
-
-.gallery__item--4 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 6;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 4;  */
-  /* grid-row: 3 / span 3; */
-}
-
-.gallery__item--5 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 6;
-  grid-row-end: 9;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 4; */
-  /* grid-row: 6 / span 3; */
-}
-
-.gallery__item--6 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 6;
-  grid-row-end: 9;
-
-  /** Alternative Syntax **/
-  /* grid-column: 5 / span 4; */
-  /* grid-row: 6 / span 3; */
-}
-
-/*
-	Using Bootstrap
-*/
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,700);
 body {
 	background: #048;
+  color: white;
 }
 .page_title { 
 	font-weight: 300;
@@ -124,7 +11,6 @@ body {
 	text-shadow: 0 1px 5px rgba(0,0,0,.8);
 	text-transform: uppercase;
 }
-
 /* PEN STYLES ========== */
 .row {
 	margin: 0;
@@ -132,6 +18,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  padding-top: 5%;
 }
 
 .test_box {
@@ -203,31 +90,31 @@ body {
 }
 
 .box-01 .inner {
-	background-image: url('https://picsum.photos/1024/768?image=1033');
+	background-image: url('./img1.png');
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 .box-02 .inner {
-	background-image: url('https://picsum.photos/1024/768?image=967');
+	background-image: url('./img2.png');
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 .box-03 .inner {
-	background-image: url('https://picsum.photos/1024/768?image=924');
+	background-image: url('./img3.png');
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 .box-04 .inner {
-	background-image: url('https://picsum.photos/1024/768?image=1073');
+	background-image: url('./img4.png');
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 .box-05 .inner {
-	background-image: url('https://picsum.photos/1024/768?image=1032');
+	background-image: url('./img5.png');
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
