--- a/templates/data.html
+++ b/templates/data.html
@@ -13,12 +13,12 @@
 <link rel="stylesheet" href="{% static 'nav2.css'%}">
 <div class="container">
   <div class="row">
+    <h1 style="margin: 0; font-size: 50px; padding: 0; padding-top: 2%;">Satelite Data</h1>
     <div class="container">
       <div class="test_box box-01 col-xs-6 col-md-4">
         <div class="inner">
           <a href="#" class="test_click">
             <div class="flex_this">
-              <h1 class="test_title">Title</h1>
               <span class="test_link">Link</span>
             </div>
           </a>
@@ -28,7 +28,6 @@
         <div class="inner">
           <a href="#" class="test_click">
             <div class="flex_this">
-              <h1 class="test_title">Title</h1>
               <span class="test_link">Link</span>
             </div>
           </a>
@@ -38,7 +37,6 @@
         <div class="inner">
           <a href="#" class="test_click">
             <div class="flex_this">
-              <h1 class="test_title">Title</h1>
               <span class="test_link">Link</span>
             </div>
           </a>
@@ -48,7 +46,6 @@
         <div class="inner">
           <a href="#" class="test_click">
             <div class="flex_this">
-              <h1 class="test_title">Title</h1>
               <span class="test_link">Link</span>
             </div>
           </a>
@@ -57,12 +54,12 @@
     </div>
   </div>
 </div>
-<div class="blog-container">
-  <div class="blog-body">
-    <p>
+<div class="blog-container" >
+  <div class="blog-body" style="max-width: 1000px; color: black;">
+    <p style="color: black;">
       As the ocean becomes more and more polluted, its blue colour begins to fade and it takes on a brownish hue. This change in the ocean's reflecting spectra can be     observed using the spectrometers present in various satellites. Interestingly, this change also seems to be linked to a decrease in the ocean's oxygen levels and an increase in greenhouse gases like carbon dioxide. The health of the ocean is intricately tied to the quality of the air that we breathe. As the ocean gets polluted the blue colour is less reflected and the ocean appears brownish. This change in reflecting spectra can be seen in the spectrometer present in satellites. This also correlates with the decreasing oxygen level and increasing greenhouse gases such as carbon dioxide. So, it is clear that the ocean directly affects the quality of air we breathe.
     </p>
-    <p>
+    <p style="color: black;">
       Disclaimer: We were not able to assess spectrometer data from the satellite directly as a result we used the graphs found on the internet.
     </p>
   </div>
